<resources>
    <string name="app_name">Final_Project</string>

    <!--    titles-->
    <string name="landing_text">Learn plane geometry for 7th grade</string>
    <string name="welcomeBack">Welcome back!</string>
    <string name="welcomeText">Welcome!</string>
    <string name="chooseFigureText">Choose a figure:</string>
    <string name="solvingText">Solving</string>

    <!--    buttons-->
    <string name="learnButton">LEARN</string>
    <string name="loginUpperCaseButton">LOGIN</string>
    <string name="loginLowerCaseButton">Login</string>
    <string name="registerUpperCaseButton">REGISTER</string>
    <string name="registerLowerCaseButton">Register</string>
    <string name="chooseFigureButton">CHOOSE</string>
    <string name="solveButton">SOLVE</string>
    <string name="saveButton">SAVE</string>
    <string name="historyButton">HISTORY</string>

    <!--    strings-->
    <string name="enterEmailText">Enter your email...</string>
    <string name="enterPasswordText">Enter your password...</string>
    <string name="retypePasswordText">Retype your password...</string>
    <string name="noAccountText">Don\'t have an account?</string>
    <string name="haveAccountText">Already have an account?</string>
    <string name="imageDescription">Solving screen image</string>
    <string name="minSeekBar">100</string>
    <string name="maxSeekbar">700</string>
</resources>