<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginScreen">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="281dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/my_font"
        android:text="@string/welcomeBack"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="314dp"
        android:layout_height="46dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="280dp"
        android:autofillHints="username"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/user_icon"
        android:drawablePadding="8dp"
        android:ems="2"
        android:hint="@string/enterEmailText"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        app:layout_constraintHeight="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_creator="@+id/titleText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="314dp"
        android:layout_height="46dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="340dp"
        android:autofillHints="username"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="8dp"
        android:ems="2"
        android:hint="@string/enterPasswordText"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        app:layout_constraintHeight="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_creator="@+id/emailText"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginButton"
        style="@style/AppButton"
        android:layout_marginTop="176dp"
        android:text="@string/loginUpperCaseButton"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passwordText" />

    <TextView
        android:id="@+id/noAccountText"
        android:layout_width="281dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/my_font"
        android:text="@string/noAccountText"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/loginButton" />

    <Button
        android:id="@+id/registerPageButton"
        style="@style/TransparentButton"
        android:layout_marginTop="28dp"
        android:text="@string/registerLowerCaseButton"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/noAccountText" />


</androidx.constraintlayout.widget.ConstraintLayout>